--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter 
+  flutter_localizations:
+    sdk: flutter
+
   cupertino_icons: ^1.0.8
 
   # 네트워크
@@ -42,6 +45,7 @@ dependencies:
 
   # 저장소
   flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
 
   # 라우팅
   go_router: ^15.2.3
@@ -51,12 +55,13 @@ dependencies:
   url_launcher: ^6.2.5 # url 런쳐
   uuid: ^4.5.1
   collection: any
+  flutter_local_notifications: ^19.4.1  # 알림
 
   # UI 관련
   bounce_tapper: ^1.1.4             
   flutter_animate: ^4.5.2
   flutter_easyloading: ^3.0.5
-  
+  focus_detector: ^2.0.1
 
   # Auth
   intl: ^0.20.2
@@ -65,6 +70,10 @@ dependencies:
   firebase_core: ^3.15.0
   firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.11
+
+  # 로컬 데이터베이스
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   
 dev_dependencies:
