--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_animate: ^4.5.2
   flutter_easyloading: ^3.0.5
   focus_detector: ^2.0.1
+  shimmer: ^3.0.0
 
   # Auth
   intl: ^0.20.2
